Install installer #8934 ke (#683)
* focus on unified installer
* plus minor cosmetic changes

close https://github.com/SUSE/spacewalk/issues/8934

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -23,7 +23,7 @@ It is also not possible to use {slsa} for SAP as a base for {productname} for a 
 
 
 [[install.scc-register]]
-== Obtaining your SUSE Customer Center Credentials
+== Obtain Your SUSE Customer Center Credentials
 
 Create an account with {scc} before installation of {sls} and {productname}.
 
@@ -41,16 +41,17 @@ Depending on your organization's setup, you might also need to activate your sub
 
 
 [[install.media]]
-== Obtaining Installation Media
+== Obtain the Unified Installer
 
-From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
+From {slsa}{nbsp}15{nbsp}SP1, {susemgr} {productnumber} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
 
 //REMARK What about Uyuni?
 ifeval::[{suma-content} == true]
-Therefore you do not require a separate registration code for {slsa} {sles-version} {sp-version}, only for Server or Proxy
+Therefore you do not require a separate registration code for {slsa}, only for {susemgr} Server or Proxy.
 endif::[]
 
-Download {slsa}{nbsp}15{nbsp}SP1 or higher from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download]
+If not already done, download the {sle} Unified Installer (version {nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
+With the Unified Installer you can install many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP Applications, or {susemgr}.
 
 
 
