--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -15,9 +15,10 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 ====
 
 
-.Procedure: Installing {susemgr} Server from a DVD image
+.Procedure: Installing {susemgr} Server from a DVD Image
 [role=procedure]
-. Boot your server from the installation image.
+
+. Boot your system with the Unified Installer.
 If booting fails you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 +
