fixed broken admin nav link

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -30,7 +30,7 @@ ifndef::backend-pdf[]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** Tuning
-*** xref:tuning-changelogmetadata.adoc[Tuning Changelog Metadata]
+*** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** Maintenance Window
 *** xref:content-lifecycle.adoc[Content Lifecycle Management]
 // Troubleshooting
