starting with spacewalk-repo-sync
https://github.com/SUSE/spacewalk/issues/3504

--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -695,6 +695,13 @@ Show help message and exit.
 
 
 
+[[spacewalk-repo-sync]]
+== Synchronize yum Repositories into SUSE Manager Channels (spacewalk-repo-sync)
+
+With [command]``spacewalk-repo-sync`` you synchronize yum repositories into {productname} channels.
+
+
+
 [[syncing.suse.mgr.repositories.scc]]
 == Syncing SUSE Manager Repositories from SCC (mgr-sync)
 
