--- a/modules/administration/pages/security-hardening.adoc
+++ b/modules/administration/pages/security-hardening.adoc
@@ -18,7 +18,7 @@ The only required ports are 4505 and 4506.
 Ports 80 and 443 are only used for package repositories, and they secured with SSL trusted certificates and GPG keys.
 
 The server never initiates a TCP handshake with a client.
-Clients initiate every connection, and the communication is bi-drectional after initiation.
+Clients initiate every connection, and the communication is bi-directional after initiation.
 
 Each client creates a set of RSA keys.
 The public key is accepted by the server when a new system is added.
