--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -5,7 +5,7 @@ This is about PostgreSQL database migration.
 
 If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based PostgreSQL version 10.
 If you are already using PostreSQL version 10, skip this section.
-If it is based on a older one such as version 9.6 you must migrate PostgreSQL to version 10 first.
+If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
 For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
 If you still run PostgreSQL 9.4 on {productname} 3.2 see the 3.2 product documentation at https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
 Direct migration from PostgreSQL 9.4 to version 10 is not supported.
