--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -8,7 +8,7 @@ If you are already using PostreSQL version 10, skip this section.
 If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
 For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
 If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation: https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
-Direct migration from PostgreSQL 9.4 to version 10 is not supported.
+You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
 
 
