--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -54,7 +54,7 @@ For more information about a database backup, see xref:db-migration.adoc#db-migr
 
 PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade:
 
-A *regular upgrade* will create a complete copy of the database, so you will need double the existing database size of space available.
+A regular upgrade will create a complete copy of the database, so you will need double the existing database size of space available.
 Regular upgrades can take a considerable amount of time, depending on the size of the database and the speed of the storage system.
 Regular upgrades also require database downtime, your database will not be accessible while the upgrade is running.
 
