--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -58,7 +58,7 @@ A regular upgrade will create a complete copy of the database, so you will need 
 Regular upgrades can take a considerable amount of time, depending on the size of the database and the speed of the storage system.
 Regular upgrades also require database downtime, your database will not be accessible while the upgrade is running.
 
-A *fast upgrade* only takes a few minutes, and uses no additional disk space.
+A fast upgrade only takes a few minutes, and uses no additional disk space.
 However, fast upgrades are more likely to fail, and if this occurs you must restore the database from the backup.
 
 
