--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -3,7 +3,7 @@
 
 This is about PostgreSQL database migration.
 
-If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based PostgreSQL version 10.
+If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
 If you are already using PostreSQL version 10, skip this section.
 If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
 For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
