--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -59,7 +59,12 @@ Regular upgrades can take a considerable amount of time, depending on the size o
 Regular upgrades also require database downtime, your database will not be accessible while the upgrade is running.
 
 A fast upgrade only takes a few minutes, and uses no additional disk space.
-However, fast upgrades are more likely to fail, and if this occurs you must restore the database from the backup.
+However, if a fast upgrade fails, you must restore the database from the backup.
+With the fast upgrade the risk to run out of disk space is smaller.
+
+In case of failure you do not have the implicit backup that you get when doing a regular upgrade.
+The regular upgrade will copy the database files instead of hardlinking them.
+This statement will scare customers and they will tend to unnecessarily waste time and space by avoiding the fast upgrade.
 
 
 .Procedure: Performing a Regular Upgrade
