--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -5,13 +5,13 @@
 This section describes how to install {susemgr} Proxy from {sle} installation media.
 It assumes you have already registered the {susemgr} Proxy product with the {scc} and have a registration code.
 
-For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
+For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[].
 
 
 
 [NOTE]
 ====
-If you want to install {susemgr} Proxy on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
+If you want to install {susemgr} Proxy on a virtual machine, ensure your virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[].
 ====
 
 
