Upgrade postgres #9203 ke (#690)
* postgres 10 migration
close https://github.com/SUSE/spacewalk/issues/9203
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -24,8 +24,14 @@ We strongly recommend that you contact SUSE Consulting to assist with this proce
 
 == Prepare to Migrate
 
-The source system must be running {productname} 3.2 with all the latest updates applied.
+The source system must be running {productname} 3.2 with all the latest updates applied.
 Before you start, ensure that the system is up to date and all updates have been installed successfully.
+
+[IMPORTANT]
+====
+It is important that PostgreSQL 10 is already running on your {productname} 3.2 system.
+For more information, see xref:db-migration.adoc[].
+====
 
 During migration, the database on the source system needs to get exported, or dumped.
 The dump is compressed, and temporarily stored on the target system.
