--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -9,7 +9,7 @@ ifndef::backend-pdf[]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:sp-migration.adoc[Service Pack Migration]
 ** xref:db-migration.adoc[Database Migration]
-//** xref:troubleshooting-upgrades-and-migrations.adoc[Troubleshooting]
+** xref:troubleshooting.adoc[Troubleshooting]
 ** xref:upgrade-script-example.adoc[Example Script for Automated Upgrades]
 //** xref:common_gfdl1.2_i.adoc[License]
 
@@ -48,7 +48,7 @@ include::modules/upgrade/pages/sp-migration.adoc[leveloffset=+1]
 include::modules/upgrade/pages/db-migration.adoc[leveloffset=+1]
 
 // Troubleshooting Upgrades and Migrations
-//include::modules/upgrade/pages/troubleshooting-upgrades-and-migrations.adoc[leveloffset=+1]
+include::modules/upgrade/pages/troubleshooting.adoc[leveloffset=+1]
 
 // Upgrade Script Example
 include::modules/upgrade/pages/upgrade-script-example.adoc[leveloffset=+1]
