--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -700,6 +700,8 @@ Show help message and exit.
 
 With [command]``spacewalk-repo-sync`` you synchronize yum repositories into {productname} channels.
 
+For a complete list of command line option, see the [command]``spacewalk-repo-sync`` manpage ([command]``man spacewalk-repo-sync``).
+
 
 
 [[syncing.suse.mgr.repositories.scc]]
