--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -5,14 +5,14 @@
 This section describes how to install {susemgr} Proxy from {sle} installation media.
 // Wondering whether we can mention here that when installation is finished you  must continue with registering the product as a suma client.
 
-// 2019-08-27, ke: I'd really like to add here:
+// 2019-08-27, ke: I'd really like to add a section title here:
 // == Before You Begin
 It assumes you have already registered the {susemgr} Proxy product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
 // REMARK: FIXME: here add a sentence about getting and using the Unified Installation
 
-// 2019-08-27, ke: I'd really like to add here:
+// 2019-08-27, ke: I'd really like to add a section title here:
 // == Installation
 
 [NOTE]
@@ -41,8 +41,7 @@ The primary goal of a {susemgrproxy} is to improve {productname} performance by 
 . To boot the Unified Installer from the installation image, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 // +
-// image::unifiedinstaller-install.png[scaledwidth=80%] (this image is with
-// server selected.
+// image::unifiedinstaller-install.png[scaledwidth=80%] (this image is with server selected.
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
 +
 image::unifiedinstaller-proxy.png[scaledwidth=80%]
