--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -12,12 +12,14 @@ Before you begin installation, ensure that your environment meets these requirem
 
 This section contains more information on each of these requirements.
 
-[NOTE]
+[IMPORTANT]
 ====
 {productname} {productnumber} is based on {slsa} {sles-version} {sp-version} as the host operating system.
-{productname} comes with a dedicated support period.
+{productname} comes with a maintenance lifecycle of two years.
+For more information, see link:https://www.suse.com/lifecycle/[].
+
 Long Term Service Pack Support (LTSS) for {sles-version} cannot be added to {productname}.
-It is also not possible to use {slsa} for SAP as a base for {productname} for a longer lifecycle.
+It is also not possible to use {slsa} for SAP as a base for {productname} to increase the lifecycle of the underlying operating system.
 ====
 
 
