Proxy works for both traditional and salt clients

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -1,7 +1,7 @@
 [[client-proxy]]
 = Registering Clients on a Proxy
 
-Proxy servers can act as a broker and package cache for Salt clients.
+Proxy servers can act as a broker and package cache for both tradional and Salt clients.
 Registering clients on a {productname} Proxy is very similar to registering them directly on {productname}, with a few key differences.
 
 This section contains information on registering Salt clients on a proxy using the {webui}, or with a bootstrap script.
