Comment out TODO

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -1,8 +1,7 @@
 [[security-repo-metadata]]
 = Signing Repository Metadata
 
-// FIXME
-TODO:: Explain why repository metadata should/would be signed.
+// TODO:: Explain why repository metadata should/would be signed.
 
 You will require a custom GPG key to be able to sign repository metadata.
 
