Initial content copy and HTML nav

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -8,9 +8,17 @@ ifndef::backend-pdf[]
 ** xref:salt-commands.adoc[Salt Commands]
 ** xref:salt-states.adoc[Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
+// Formulas
 ** xref:salt-formulas.adoc[Salt Formulas]
-*** xref:salt-formulas-standard.adoc[Standard Formulas]
 *** xref:salt-formulas-custom.adoc[Custom Formulas]
+*** xref:formula-bind.adoc[Bind Formula]
+*** xref:formula-branchnetwork.adoc[Branch Network Formula]
+*** xref:formula-dhcpd.adoc[DHCPd Formula]
+*** xref:formula-imagesync.adoc[Image Sync Formula]
+*** xref:formula-pxe.adoc[PXE Formula]
+*** xref:formula-saltboot.adoc[Saltboot Formula]
+*** xref:formula-tftpd.adoc[TFTPd Formula]
+*** xref:formula-vsftpd.adoc[VsFTPd Formula]
 //*** xref:salt-example-formula.adoc[Example Custom Formula]
 ** xref:salt-ssh.adoc[Salt SSH]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
