File renames + PDF nav

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -9,8 +9,7 @@ ifndef::backend-pdf[]
 ** xref:salt-states.adoc[Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
 // Formulas
-** xref:salt-formulas.adoc[Salt Formulas]
-*** xref:salt-formulas-custom.adoc[Custom Formulas]
+** xref:formulas-intro.adoc[Salt Formulas]
 *** xref:formula-bind.adoc[Bind Formula]
 *** xref:formula-branchnetwork.adoc[Branch Network Formula]
 *** xref:formula-dhcpd.adoc[DHCPd Formula]
@@ -19,6 +18,7 @@ ifndef::backend-pdf[]
 *** xref:formula-saltboot.adoc[Saltboot Formula]
 *** xref:formula-tftpd.adoc[TFTPd Formula]
 *** xref:formula-vsftpd.adoc[VsFTPd Formula]
+*** xref:formulas-custom.adoc[Custom Formulas]
 //*** xref:salt-example-formula.adoc[Example Custom Formula]
 ** xref:salt-ssh.adoc[Salt SSH]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
@@ -50,13 +50,28 @@ include::modules/salt/pages/salt-states.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-file-locations.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-formulas.adoc[leveloffset=+1]
+// Formulas
+include::modules/salt/pages/formulas-intro.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-formulas-standard.adoc[leveloffset=+2]
+include::modules/salt/pages/formula-bind.adoc[leveloffset=+2]
 
-include::modules/salt/pages/salt-formulas-custom.adoc[leveloffset=+2]
+include::modules/salt/pages/formula-branchnetwork.adoc[leveloffset=+2]
 
-include::modules/salt/pages/salt-example-formula.adoc[leveloffset=+2]
+include::modules/salt/pages/formula-dhcpd.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formula-imagesync.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formula-pxe.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formula-saltboot.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formula-tftpd.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formula-vsftpd.adoc[leveloffset=+2]
+
+include::modules/salt/pages/formulas-custom.adoc[leveloffset=+2]
+
+//*** xref:salt-example-formula.adoc[leveloffset=+2]
 
 include::modules/salt/pages/salt-ssh.adoc[leveloffset=+1]
 
