--- a/modules/salt/pages/formulas-intro.adoc
+++ b/modules/salt/pages/formulas-intro.adoc
@@ -1,22 +1,22 @@
-[[retail-formulas]]
-= Introduction to Retail Formulas
+[[salt.formulas]]
+= Formulas
 
 
-Formulas are pre-written Salt states, that are used to configure your {smr} installation.
-This section lists the primary formulas shipped with {smr} and their configuration options.
+Formulas are collections of Salt States that have been pre-written by other Salt users and contain generic parameter fields.
+Formulas allow for reliable reproduction of a specific configuration.
+Formulas can be installed from RPM packages or an external git repository.
 
-All the formulas in this section must be accurately configured for your {smr} installation to function correctly.
-If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration.
-You can then manually edit the formulas as required.
+Formulas work best for large, non-trivial, configurations.
+For trivial tasks, use a state rather than a formula.
 
+Formula data can be managed using the XMLRPC API.
 
-.State and Formula Name Collisions
-[IMPORTANT]
-====
-If a formula uses the same name as an existing Salt state, the two names will collide, and could result in the formula being used instead of the state.
-Always check the names of states and formulas to avoid name collisions.
-====
+Formulas and states both act as a kind of configuration documentation.
+When you have written and stored the configuration, they provide a snapshot of your infrastructure.
 
-Most formulas can be updated using the {susemgr} {webui}.
-When you have made changes to your formula, ensure you apply the highstate.
-The highstate propagates your changes to the appropriate services.
+You can use the {productname} {webui} to apply common {productname} formulas.
+The most commonly used formulas are documented in this section.
+
+Alternatively, you can use pre-written formulas as a starting point for your own custom formulas.
+Pre-written formulas are available from https://github.com/saltstack-formulas.
+For more information on custom formulas, see xref:salt:salt-formulas-custom.adoc[].
