Update Retail intro and HTML nav

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -13,14 +13,14 @@ ifndef::backend-pdf[]
 *** xref:retail-deploy-terminals.adoc[Deploying Terminals]
 // Formulas
 ** xref:retail-formulas-intro.adoc[Formulas]
-*** xref:retail-formula-bind.adoc[Bind Formula]
-*** xref:retail-formula-branchnetwork.adoc[Branch Network Formula]
-*** xref:retail-formula-dhcpd.adoc[DHCPd Formula]
-*** xref:retail-formula-imagesync.adoc[Image Sync Formula]
-*** xref:retail-formula-pxe.adoc[PXE Formula]
-*** xref:retail-formula-saltboot.adoc[Saltboot Formula]
-*** xref:retail-formula-tftpd.adoc[TFTPd Formula]
-*** xref:retail-formula-vsftpd.adoc[VsFTPd Formula]
+// These exist in the Salt Guide now. LKB 2019-09-05
+//*** xref:retail-formula-branchnetwork.adoc[Branch Network Formula]
+//*** xref:retail-formula-dhcpd.adoc[DHCPd Formula]
+//*** xref:retail-formula-imagesync.adoc[Image Sync Formula]
+//*** xref:retail-formula-pxe.adoc[PXE Formula]
+//*** xref:retail-formula-saltboot.adoc[Saltboot Formula]
+//*** xref:retail-formula-tftpd.adoc[TFTPd Formula]
+//*** xref:retail-formula-vsftpd.adoc[VsFTPd Formula]
 // Admin
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-delta-images.adoc[Delta Images]
