--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -3,9 +3,15 @@
 
 
 Formulas are pre-written Salt states, that are used to configure your {smr} installation.
-This section lists the primary formulas shipped with {smr} and their configuration options.
 
-All the formulas in this section must be accurately configured for your {smr} installation to function correctly.
+You can use the {productname} {webui} to apply common {productname} formulas.
+For the most commonly used formulas, see xref:salt:formulas-intro.adoc[].
+
+Alternatively, you can use pre-written formulas as a starting point for your own custom formulas.
+Pre-written formulas are available from https://github.com/saltstack-formulas.
+For more information on custom formulas, see xref:salt:salt-formulas-custom.adoc[].
+
+All formulas must be accurately configured for your {smr} installation to function correctly.
 If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration.
 You can then manually edit the formulas as required.
 
