Update retail PDF nav

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -59,16 +59,19 @@ include::modules/retail/pages/retail-requirements.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-install-unified.adoc[leveloffset=+3]
 
-include::modules/retail/pages/retail-install-packages.adoc[leveloffset=+3]
+// FIXME: needs research, 2019-07-23, ke:
+// include::modules/retail/pages/retail-install-packages.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-install-setup.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+3]
 
+// Frmulas
+include::modules/retail/pages/retail-formulas-intro.adoc[leveloffset=+2]
+
 // Admin
 include::modules/retail/pages/retail-admin.adoc[leveloffset=+2]
 
-//include::modules/retail/pages/retail-formulas.adoc[leveloffset=+3]
 include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
