--- a/modules/salt/pages/formula-branchnetwork.adoc
+++ b/modules/salt/pages/formula-branchnetwork.adoc
@@ -13,7 +13,7 @@ The most common ways provide either a dedicated or shared LAN for terminals.
 In this configuration, the branch server requires at least two network interfaces: one acts as a WAN to communicate with the {susemgr} server, and the other one acts as an isolated LAN to communicate with terminals.
 
 This configuration allows for the branch server to provide DHCP, DNS, TFTP, PXE, and FTP services to terminals.
-These services can be configured with {smr} formulas in the {susemgr} {webui}.
+These services can be configured with Salt formulas in the {susemgr} {webui}.
 
 
 .Procedure: Setting Up a Branch Server with a Dedicated LAN
@@ -39,7 +39,7 @@ These services can be configured with {smr} formulas in the {susemgr} {webui}.
 In this configuration, the branch server has only one network interface card, which is used to connect to the {susemgr} server as well as the terminals.
 
 This configuration allows for the branch server to provide DNS, TFTP, PXE, and FTP services to terminals.
-These services can be configured with {smr} formulas in the {susemgr} {webui}.
+These services can be configured with Salt formulas in the {susemgr} {webui}.
 Optionally, the branch server can also provide DHCP services in this configuration.
 
 [NOTE]
