Removed dead entity

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -51,7 +51,7 @@ Therefore you do not require a separate registration code for {slsa}, only for {
 endif::[]
 
 If not already done, download the {sle} Unified Installer (version {nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
-With the Unified Installer you can install many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP Applications, or {susemgr}.
+With the Unified Installer you can install many SLE-based base products such as {slsa}, {slsa} for SAP Applications, or {susemgr}.
 
 
 
