--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -29,7 +29,7 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="./susemanager-docs_
 | xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client_configuration_guide.pdf", window="_blank" role="green"]
 | xref:upgrade:upgrade-overview.adoc[Upgrade Guide]                                 | icon:file-pdf[link="../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
 | xref:reference:intro.adoc[Reference Guide]                                        | icon:file-pdf[link="../pdf/suse_manager_reference_manual.pdf", window="_blank" role="green"]
-| xref:administration:intro.doc[Administration Guide]                               | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+| xref:administration:intro.adoc[Administration Guide]                               | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
 | xref:salt:salt-intro.adoc[Salt Guide]                                             | icon:file-pdf[link="../pdf/suse_manager_salt_guide.pdf", window="_blank" role="green"]
 | xref:retail:retail-introduction.adoc[Retail Guide]                                | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
 
