--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -51,7 +51,9 @@ You only require a valid registration code for {productname}.
 You do not require a separate code for {slsa} {sles-version} {sp-version}.
 endif::[]
 
-If you already have the installer media for {slsa}{nbsp}15{nbsp}SP1, you can re-use it. Otherwise, download the installer from https://www.suse.com/products/suse-manager/download/[SUSE Manager Media Download]. This page will also allow you to retrieve an evaluation code for {productname} if you don't have a valid registration code yet.
+If you already have installation media for {slsa}{nbsp}15{nbsp}SP1, you can re-use it. 
+Otherwise, download the installer from https://www.suse.com/products/suse-manager/download/[SUSE Manager Media Download]. 
+This page will also allow you to retrieve an evaluation code for {productname} if you don't have a valid registration code yet.
 
 //TODO: What about Uyuni?
 
