--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -36,7 +36,9 @@ Mandatory modules are pre-selected and you cannot disable them.
 +
 
 image::unifiedinstaller-addon.png[scaledwidth=80%]
-. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next]. Note that it is not recommended to run any other workloads on your {productname}. So only add add-ons that you absolutely require, like driver repositories from your hardware vendor.
+. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next]. 
+We do not recommend that you run any other workloads on {productname}. 
+Only use add-ons that you absolutely require, such as driver repositories from your hardware vendor.
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, either accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
