More precise wording. (#682)
* More precise wording.
Co-Authored-By: Karl Eichwalder <ke@suse.de>
Co-Authored-By: Lana Brindley <lbrindley@suse.de>
* Change SLES to SLE.
Replacing the {slsa} macro with "SUSE Linux Enterprise" to get rid of the "Server". 
* Cleaned up and clarified wording about registration. 
* Add note that add-ons should be used with care.
* Fixing zypper calls
* Improve wording on third party software

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -45,11 +45,12 @@ Depending on your organization's setup, you might also need to activate your sub
 [[install.media]]
 == Obtain the Unified Installer
 
-From {slsa}{nbsp}15{nbsp}SP1, {susemgr} {productnumber} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
+{susemgr} Server and Proxy can be installed with the {sle} Unified Installer.
 
 //REMARK What about Uyuni?
 ifeval::[{suma-content} == true]
-Therefore you do not require a separate registration code for {slsa}, only for {susemgr} Server or Proxy.
+You only require a valid registration code for {productname}. 
+You do not require a separate code for {slsa}{nbsp}{sles-version} {sp-version}.
 endif::[]
 
 If not already done, download the {sle} Unified Installer (version{nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
