--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -6,8 +6,7 @@
 This section describes how to install {susemgr} Server from the {sle} installation media.
 For this topic we assume that you have already registered your {susemgr} product with {scc} and have obtained a registration code.
 
-For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[].
-
+For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:general-requirements.adoc[].
 
 [NOTE]
 ====
@@ -37,7 +36,9 @@ Mandatory modules are pre-selected and you cannot disable them.
 +
 
 image::unifiedinstaller-addon.png[scaledwidth=80%]
-. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
+. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next]. 
+We do not recommend that you run any other workloads on {productname}. 
+Only use add-ons that you absolutely require, such as driver repositories from your hardware vendor.
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, either accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
