Add new sections

--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -66,3 +66,15 @@ configure-proxy.sh
 ----
 . At the ``Do you want to import existing certificates?`` prompt, type kbd:[y]
 . Follow the prompts to complete setup.
+
+
+
+== Replace Self-Signed Certificates with Custom Certificates
+
+TBD
+
+
+
+== Replace Existing Custom Certificates.
+
+TBD
