Add info about available Matcher algorithms

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -53,6 +53,17 @@ This is the list of supported filters:
 No package dependency solving is done on content filtering.
 ====
 
+Depending on the Filter Type multiple ``Matchers`` are available. There exists:
+
+* contains
+* matches (regexp)
+* equals
+* greater
+* greater or equal
+* lower or equal
+* lower
+
+
 === Filter ``rule`` Parameter
 Moreover, each filter has a ``rule`` parameter set to either ``Allow`` or ``Deny``.
 The filters are processed:
