--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -57,7 +57,7 @@ No package dependency solving is done on content filtering.
 Moreover, each filter has a ``rule`` parameter set to either ``Allow`` or ``Deny``.
 The filters are processed:
 
-* if a package or patch satisfies a ``Deny`` filter, it will be excluded from the result,
+* If a package or patch satisfies a ``Deny`` filter, it will be excluded from the result.
 * If a package or patch satisfies an ``Allow`` filter, it will be included in the result (even if it was excluded by a ``Deny`` filter).
 
 This behavior is useful when you want to exclude large number of packages or patches using a general ``Deny`` filter and "cherry-pick" specific packages or patches with specific ``Allow`` filters.
