renaming for using it with version 4

--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -4,7 +4,7 @@ ifndef::backend-pdf[]
 * xref:upgrade-overview.adoc[Upgrade Guide]
 ** xref:server-upgrade.adoc[Server Update]
 //** xref:migrate-3x-3x.adoc[Server Upgrade 3.x -> 3.x]
-** xref:migrate-3x-4x.adoc[Server Upgrade 3.x -> 4.x]
+** xref:migrate-4x-4x.adoc[]
 ** xref:proxy-migration.adoc[Proxy Upgrade 3.x -> 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:db-migration.adoc[Database Migration]
